--- a/app/partials/dental_docter.html
+++ b/app/partials/dental_docter.html
@@ -34,8 +34,8 @@
 		<div class="dental-docter_main_has background" id="docter_box">
 			<div class="dental-docter_main_has_box">
 				<div class="dental-docter_main_has_box--left">
-					<div class="dental-docter_main_has_tit"><i class="iconfont" style="color: #4285f4;font-size: 15px;">&#xe632;</i>瑞泰口腔医院总院</div>
-					<div class="dental-docter_main_has_address"><i class="iconfont" style="color: #999;font-size: 15px;">&#xe633;</i>北京市朝阳区北苑路媒体村天居园1号楼</div>
+					<div class="dental-docter_main_has_tit"><i class="iconfont" style="color: #4285f4;font-size: 15px;margin-right: 5px;">&#xe632;</i>瑞泰口腔医院总院</div>
+					<div class="dental-docter_main_has_address"><i class="iconfont" style="color: #999;font-size: 15px;margin-right: 5px;">&#xe633;</i>北京市朝阳区北苑路媒体村天居园1号楼</div>
 				</div>
 				<div class="dental-docter_main_has_box--right"><i class="iconfont io" id="jian" style="font-size: 14px;color: #ccc;">&#xe60f;</i></div>
 			</div>
