--- a/app/sass/docter_detail.scss
+++ b/app/sass/docter_detail.scss
@@ -7,6 +7,7 @@ body {
 	color: #444;
 	font-size: 15px;
 	background: #f5f5f5;
+	padding-bottom: 49px;
    .docter-detail-main {
    		background: #fff;
    		padding: 0 20px;
