--- a/app/partials/teeth_reservation_list.html
+++ b/app/partials/teeth_reservation_list.html
@@ -6,8 +6,8 @@
 		<li>
 			<div class="teeth-title-container">少儿齿科保险保健套餐
 				<div class="teeth-tip"></div>
-			<!-- 	<div class="ybwx-btn ybwx-btn--primary" style="float:right">预约</div> -->
-			<div class="teeth-status">预约成功</div>
+				<div class="ybwx-btn ybwx-btn--primary" style="float:right">预约</div>
+			<!-- <div class="teeth-status">预约成功</div> -->
 			</div>
 			<div class="teeth-content">
 
@@ -41,8 +41,8 @@
 		<li>
 			<div class="teeth-title-container">少儿齿科保险保健套餐
 				<div class="teeth-tip"></div>
-				<!-- <div class="ybwx-btn ybwx-btn--primary" style="float:right">预约</div> -->
-			<div class="teeth-status">预约成功</div>
+				<div class="ybwx-btn ybwx-btn--primary" style="float:right">预约</div>
+			<!-- <div class="teeth-status">预约成功</div> -->
 			</div>
 			<div class="teeth-content">
 
