--- a/app/partials/teeth_reservation_list.html
+++ b/app/partials/teeth_reservation_list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/teeth_reservation_list.css?rev=bdea70541250f848f16707642e9b8692">
+<link rel="stylesheet" href="css/teeth_reservation_list.css?rev=17f497af30125b83dbc7e584ba6d15df">
 
 
 <div class="teeth_reservation_container" data-ng-init="init()"  cg-busy="secondPromise">
@@ -6,8 +6,10 @@
 		<li>
 			<div class="teeth-title-container">少儿齿科保险保健套餐
 				<div class="teeth-tip"></div>
-			<!-- 	<div class="ybwx-btn ybwx-btn--primary" style="float:right">预约</div> -->
-			<div class="teeth-status">预约成功</div>
+				<div class="teech-btn-wrapper">
+					<div class="ybwx-btn ybwx-btn--primary">预约</div>
+				</div>
+			<!-- <div class="teeth-status">预约成功</div> -->
 			</div>
 			<div class="teeth-content">
 
