--- a/app/sass/teeth_reservation_list.scss
+++ b/app/sass/teeth_reservation_list.scss
@@ -2,7 +2,7 @@
 * @Author: fanzhang
 * @Date:   2016-08-30 11:05:30
 * @Last Modified by:   fanzhang
-* @Last Modified time: 2016-09-01 17:48:44
+* @Last Modified time: 2016-09-01 18:43:32
 */
    @import "base/classes.scss";
    @import "base/variables.scss";
@@ -17,7 +17,10 @@
 		margin-bottom:10px;
 	}
 }	
-
+.teech-btn-wrapper{
+	width:80px;
+	float:right;
+}
 .teeth-title-container{
 		height:	50px;
 		line-height: 50px;
