--- a/app/partials/child_dental.html
+++ b/app/partials/child_dental.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/child_dental.css?rev=c453f9f8ed41e0343879e1ad7b06db08">
+<link rel="stylesheet" href="css/child_dental.css?rev=e44c929e7cfda59913479c60af4b6375">
 
 <div class="child-dental-container">
     <!--  第一页-->
@@ -9,10 +9,10 @@
 	</div>
     <div class="child-dental-container_word">让宝宝享受专业的口腔检查、虫牙预防、龋齿治疗、咬合畸形检查，无需体检，无等待期，当日购买即可预约就诊。</div>
     <div class="kong"></div>
-    <div class="child-dental-container_setMeal"> 
-        <div class="child-dental-container_setMeal--word">选择套餐：套餐A 瑞泰/普尔-基础保健套餐</div>
+<!--     <div class="child-dental-container_setMeal"> 
+        <div class="child-dental-container_setMeal--word"  ng-click="showMask()">选择套餐：套餐A 瑞泰/普尔-基础保健套餐</div>
         <div><i class="iconfont" style="color: #e2e2e2;font-size: 15px;">&#xe60f;</i></div>
-    </div>
+    </div> -->
     <div class="kong"></div>
 	<!--  第二页-->
     <div class="main-list">
@@ -118,10 +118,29 @@
         </div>
 	</div>
 	<footer>
-		<div class="footer-first"><i class="iconfont" style="font-size: 20px;color: #999;">&#xe61c;</i></div>
-		<div class="footer-about-nuobei">关于诺贝</div>
-		<div class="footer-about-mai">立即购买</div>
+		<div class="footer-first" ng-click="home()"><i class="iconfont" style="font-size: 20px;color: #999;">&#xe61c;</i></div>
+		<div class="footer-about-nuobei" ng-click="showQrcode()">关注诺贝</div>
+		<div class="footer-about-mai" ng-click="showMask()">立即购买</div>
 	</footer>
+
+    <div  class="mask" id="dental_mask_container"  style="display:none;z-index:1900">
+        <div class="head-container">
+            <img src="img/mask_close.jpg" style="width:20px;height:20px;float:right;margin-top: 5px;margin-right: 5px;" ng-click="close()" />
+            <div class="taocan">
+                 <div class="title">请选择购买的套餐</div>
+                 <div class="ybwx-btn ybwx-btn--primary"   ng-click="choose($event,577)">瑞泰/普尔 基础保健套餐 318元/年</div>         
+                 <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,578)">瑞泰/普尔 虫牙治疗套餐 1138元/年</div>         
+                 <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,579)">拜博-齿科高端保健套餐 498元/年</div>         
+                 <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,580)">拜博-咬合畸形检查套餐 418元/年</div>   
+        
+                 <div class="mask_des" >     购买后请到北京、上海、广州的指定医院就诊。      </div>
+            </div>
+            <div class="submit-wrapper">
+             <div class="ybwx-btn ybwx-btn--primary" ng-click="submit()">确定</div>   
+             </div>
+        </div>
+        
+    </div>
 </div>
 <script>
 	$("#switch .switch-child").click(function(){
@@ -130,7 +149,11 @@
 		// $("#switch").find("li").addClass("blue");
 
 	});
-  
+      $("body").on("click",".head-container",function(event){
+        event.preventDefault();
+        event.stopPropagation();
+        return false;
+    }); 
    $(window).scroll(function(){
       var y=$(document).scrollTop();
       if(y> $(window).height()){
