--- a/app/partials/dental/dental_docter.html
+++ b/app/partials/dental/dental_docter.html
@@ -41,21 +41,21 @@
 			</div>
 			
 			<div class="dental-docter_main_has_docter background" id="docter_has">
-				<div class="docter_pic marRight">
+				<div class="docter_pic marRight"  data-id="2">
 					<img src="img/child_dental/meinv.jpg">
 					<div class="docter_pic_name-word">
 						<div class="docter_pic_name">刘文婷</div>
 						<div class="docter_pic_detail">擅长儿童各类疾病治疗</div>
 					</div>
 				</div>
-				<div class="docter_pic marRight">
+				<div class="docter_pic marRight"  ng-click="goDocter_detail()" data-id="2">
 					<img src="img/child_dental/meinv.jpg">
 					<div class="docter_pic_name-word">
 						<div class="docter_pic_name">刘文婷</div>
 						<div class="docter_pic_detail">擅长儿童各类疾病治疗</div>
 					</div>
 				</div>
-				<div class="docter_pic">
+				<div class="docter_pic"  data-id="3">
 					<img src="img/child_dental/meinv.jpg">
 					<div class="docter_pic_name-word">
 						<div class="docter_pic_name">刘文婷</div>
