--- a/app/partials/dental_reservation_list.html
+++ b/app/partials/dental_reservation_list.html
@@ -7,7 +7,7 @@
 			<div class="teeth-title-container">少儿齿科保险保健套餐
 				<div class="teeth-tip"></div>
 				<div class="teech-btn-wrapper">
-					<div class="ybwx-btn ybwx-btn--primary" ng-click="goDentalDocter()" data-id="1">预约</div>
+					<div class="ybwx-btn ybwx-btn--primary" >预约</div>
 				</div>
 			<!-- <div class="teeth-status">预约成功</div> -->
 			</div>
