--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -42,10 +42,7 @@
 			<!-- <div class="supply-info" > -->
 
 			<div class="title" ng-if="data.address"><i class="iconfont" style="color: #999;font-size: 17px;margin-right: 5px;vertical-align: -1px;">&#xe611;</i>联系信息</div>
-			<div class="new-supply-item" ng-if="data.email">
-				<div class="introd">电子邮箱</div>
-				<div class="content"><input type="email" placeholder="例：example@nuobei.cn" name="email" ng-model="user.email" class="new-input"  required></div>
-			</div>
+		
 			<div data-toggle="distpicker" ng-show="data.prov_city_id">
 				<div class="new-supply-item">
 					<div class="introd">居住省份</div>
@@ -77,13 +74,18 @@
 				<small class="error" ng-show="tbform.post.$error.maxlength">邮政编码必须是6位</small>
 			</div>
 			<div class="kong"></div>
-			<div class="title" ng-show="data.jobs.length>0"><i class="iconfont" style="color: #999;font-size: 17px;margin-right: 5px;vertical-align: -1px;">&#xe611;</i>补充信息</div>
+			<div class="title" ng-show="data.jobs.length>0 || data.email || data.height || data.weight || data.hospital || data.eng_name || data.destination || data.visa_city || data.flight_no || data.car_no || data.destination "><i class="iconfont" style="color: #999;font-size: 17px;margin-right: 5px;vertical-align: -1px;">&#xe611;</i>补充信息</div>
+
+			<div class="new-supply-item" ng-if="data.email">
+				<div class="introd">电子邮箱</div>
+				<div class="content"><input type="email" placeholder="例：example@nuobei.cn" name="email" ng-model="user.email" class="new-input"  required></div>
+			</div>
 			<div class="new-supply-item"  ng-show="data.jobs.length>0">
 				<div class="introd">职业</div>
 				<div class="content" id="job"><select class="content" ><option id="first_option_color">请选择职业</option><option data-value="{{jobs.job_id}}" ng-repeat="jobs in data.jobs">{{jobs.job_name}}</option></select></div>
 				<div class="danwei"><i class="iconfont" style="color: #ccc;font-size: 17px;margin-left: 10px;">&#xe60f;</i></div>
 			</div>
-		
+			
 	 		<div class="new-supply-item" ng-if="data.height">
 				<div class="introd">身高</div>
 				<div class="content"><input type="number" name="height" placeholder="请如实填写身高，方便后续理赔" ng-model="user.height" class="new-input"  required></div>
@@ -104,9 +106,9 @@
 		
 
 
-			<div class="supply-item"  style="color:red" ng-show="tbform.address.$dirty && tbform.address.$invalid ">
+		<!-- 	<div class="supply-item"  style="color:red" ng-show="tbform.address.$dirty && tbform.address.$invalid ">
 				<small class="error" ng-show="tbform.address.$error.required">地址必填</small>
-			</div>
+			</div> -->
 			<div class="supply-item" ng-if="data.hospital">
 				<div class="introd">就诊医院</div>
 				<div class="content"><input type="text" name="hospital" ng-model="user.hospital" class="ipt"   placeholder="请输入糖尿病就诊医院" required></div>
