--- a/app/partials/child_dental.html
+++ b/app/partials/child_dental.html
@@ -128,12 +128,12 @@
             <img src="img/mask_close.jpg" style="width:20px;height:20px;float:right;margin-top: 5px;margin-right: 5px;" ng-click="close()" />
             <div class="taocan">
                  <div class="title">请选择购买的套餐</div>
-                 <div class="ybwx-btn ybwx-btn--primary"   ng-click="choose($event,577)">瑞泰/普尔 基础保健套餐 318元/年</div>         
-                 <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,578)">瑞泰/普尔 虫牙治疗套餐 1138元/年</div>         
-                 <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,579)">拜博-齿科高端保健套餐 498元/年</div>         
-                 <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,580)">拜博-咬合畸形检查套餐 418元/年</div>   
+                 <div class="ybwx-btn ybwx-btn--primary"   ng-click="choose($event,577)">A:瑞泰/普尔-乳牙保健套餐 318元/年</div>         
+                 <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,578)">B:拜博-儿童虫牙预防套餐 498元/年</div>         
+                 <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,579)">C:瑞泰/普尔-虫牙治疗套餐 1138元/年</div>         
+                 <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,580)">D:拜博-咬合畸形检查套餐 418元/年</div>   
         
-                 <div class="mask_des" >     购买后请到北京、上海、广州的指定医院就诊。      </div>
+                 <div class="mask_des" >   A、C套餐支持北京和上海使用，B、D套餐支持北京和广州使用。      </div>
             </div>
             <div class="submit-wrapper">
              <div class="ybwx-btn ybwx-btn--primary" ng-click="submit()">确定</div>   
