simple auto commit

--- a/app/partials/child_dental.html
+++ b/app/partials/child_dental.html
@@ -43,6 +43,8 @@
                 <img src="img/child_dental/2-1.png">
                 <img src="img/child_dental/3.png">
                 <img src="img/child_dental/3-1.png">
+                <img src="img/child_dental/4.png">
+                <img src="img/child_dental/4-1.png">
             </div>  
             <img src="img/child_dental/yuyue.png">
             <img class="border_bottom" src="img/child_dental/yuyue_word.png">
@@ -56,6 +58,8 @@
             <img src="img/child_dental/package/package_22.png">
             <img src="img/child_dental/package/package_3.png">
             <img src="img/child_dental/package/package_33.png">
+             <img src="img/child_dental/package/package_4.png">
+            <img src="img/child_dental/package/package_44.png">
         </div><!-- <div class="kong"></div> -->
         
 
