simple auto commit

--- a/app/partials/child_dental.html
+++ b/app/partials/child_dental.html
@@ -37,14 +37,14 @@
                 <img src="img/child_dental/profile/profile_4.png">
             </div>
              <div class="main-list_intro" >
-                <img src="img/child_dental/1.png">
-                <img src="img/child_dental/1-1.png">
-                <img src="img/child_dental/2.png">
-                <img src="img/child_dental/2-1.png">
-                <img src="img/child_dental/3.png">
-                <img src="img/child_dental/3-1.png">
-                <img src="img/child_dental/4.png">
-                <img src="img/child_dental/4-1.png">
+                <img src="img/child_dental/1.png?v=1">
+                <img src="img/child_dental/1-1.png?v=1">
+                <img src="img/child_dental/2.png?v=1">
+                <img src="img/child_dental/2-1.png?v=1">
+                <img src="img/child_dental/3.png?v=1">
+                <img src="img/child_dental/3-1.png?v=1">
+                <img src="img/child_dental/4.png?v=1">
+                <img src="img/child_dental/4-1.png?v=1">
             </div>  
             <img src="img/child_dental/yuyue.png">
             <img class="border_bottom" src="img/child_dental/yuyue_word.png">
@@ -52,14 +52,14 @@
        
     	<!-- 套餐 -->
     	<div class="main-list_intro" id="taocan" style="display: none;">
-            <img src="img/child_dental/package/package_1.png">
-            <img src="img/child_dental/package/package_11.png">
-            <img src="img/child_dental/package/package_2.png">
-            <img src="img/child_dental/package/package_22.png">
-            <img src="img/child_dental/package/package_3.png">
-            <img src="img/child_dental/package/package_33.png">
-             <img src="img/child_dental/package/package_4.png">
-            <img src="img/child_dental/package/package_44.png">
+            <img src="img/child_dental/package/package_1.png?v=1">
+            <img src="img/child_dental/package/package_11.png?v=1">
+            <img src="img/child_dental/package/package_2.png?v=1">
+            <img src="img/child_dental/package/package_22.png?v=1">
+            <img src="img/child_dental/package/package_3.png?v=1">
+            <img src="img/child_dental/package/package_33.png?v=1">
+             <img src="img/child_dental/package/package_4.png?v=1">
+            <img src="img/child_dental/package/package_44.png?v=1">
         </div><!-- <div class="kong"></div> -->
         
 
@@ -150,6 +150,7 @@
 	$("#switch .switch-child").click(function(){
 		$("#switch").find(".switch-child").removeClass("border_3px");
 		$(this).addClass("border_3px").show();
+        $(document).scrollTop(424);
 		// $("#switch").find("li").addClass("blue");
 
 	});
