--- a/app/partials/pay_success.html
+++ b/app/partials/pay_success.html
@@ -1,22 +1,26 @@
 <link rel="stylesheet" type="text/css" href="/css/pay_success.css">
-<div class="pay_success_ctrl">
-	<div class="win">
-		<img src="/wx_share/img/win.jpg"> &nbsp;支付成功，投保中...
+<div  ng-show="!isChildDental">
+	<div class="pay_success_ctrl">
+		<div class="win">
+			<img src="/wx_share/img/win.png">&nbsp;支付成功，投保中...</div>
+		<div class="hint">
+			请按照以下操作
+			<br>查看投保记录，获取电子保单</div>
 	</div>
-	<div class="hint">请按照以下操作<br>查看投保记录，获取电子保单</div>
-	
-	<!-- <div class="main">
-		<div class="main_left">
-			<img src="/img/win_hint/xuxian.png">
-		</div>
-		<div class="main_right">
-			<div class="padd_25">长按二维码，关注 [ 诺贝 ] </div>
-			<div class="code_img"><img src="/img/two_code.jpg" ></div>
-			<div>打开诺贝，查看[ 交易记录 ]</div>
-		</div>
-	</div>
-	<div class="pay_food">
-		<img src="/img/tishi.jpg">
-	</div> -->
+	<div class="main">
+		<img src="/img/win_hint/main.png"></div>
+
 </div>
-<div class="main"> <img src="/img/win_hint/main.png"></div>
+
+<div ng-show="isChildDental">
+	<div class="pay_success_ctrl">
+		<div class="win">
+			<img src="/wx_share/img/win.png">&nbsp;支付成功，投保中...</div>
+		<div class="hint">
+			您现在即可
+			<br>按照以下操作进行预约就诊</div>
+	</div>
+	<div class="main">
+		<img src="/img/child_dental/pay_success.png"></div>
+
+</div>
