--- a/app/template/new/product_115.html
+++ b/app/template/new/product_115.html
@@ -8,7 +8,7 @@
 		<div class="introd-container">
 			<div class="detail-container">
 			  <div>
-				<img src="/img/product/ckbx02.png" ></div>
+				<img src="/img/product/hztkgdyl.png" ></div>
 			</div>
 		</div>
 		<!--
@@ -41,15 +41,17 @@
 		<div class="showknow-container" style="display: none;">
 			<div class="know-content">
 			<h4>1.投保年龄</h4>
-			<p>本产品投保年龄为1周岁—18周岁（含1、18周岁）。</p>
+			<p>生满30天-44周岁，最高可续保至99周岁。</p>
 			<h4>2.保险期间</h4>
-			<p>本产品的保险期间为一年，一年内都可以进行预约就诊。</p>
+			<p>本产品的保险期间为一年。</p>
 			<h4>3.等待期</h4>
-			<p>本产品无等待期，支付成功后当日即可提交预约申请。</p>
-			<h4 class="hide">4.投保地区 </h4>
-			<p class="hide">本产品不限投保地区，但仅限在北京、上海、广州的指定医院使用。</p>
-			<h4 class="hide">5.电子保单</h4>
-			<p class="hide">本产品提供电子保单，投保成功后，可在泰康在线官网下载电子保单。http://www.tk.cn/webquery/</p>
+			<p>所有责任的等待期为30天；续保无等待期。</p>
+			<h4 class="hide">4.投保限制 </h4>
+			<p class="hide">病毒性肝炎患者、大小三阳及乙肝病毒携带者客户不能投保本产品。</p>
+			<h4 class="hide">5.医疗机构</h4>
+			<p class="hide">本产品针对计划二、计划三的特定医疗机构,请见<a href="/ybwx-web/api/web_page/257">医院清单</a></p>
+			<h4 class="hide">6. 限投份数</h4>
+			<p class="hide">每位被保险人最多投保一份，多投无效。</p>
 
 
 			</div>
@@ -58,8 +60,8 @@
 			</div>
 
 			<div class="button-container">
-				<div class="left"><a href="/ybwx-web/api/web_page/249" class="weui_btn weui_btn_plain_more">产品条款</a></div>
-				<div class="right"><a href="/#/claim_information?claim_id=40" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
+				<div class="left"><a href="/ybwx-web/api/web_page/259" class="weui_btn weui_btn_plain_more">产品条款</a></div>
+				<div class="right"><a href="/#/claim_information?claim_id=39" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
 			</div>
 
 		</div>
@@ -67,42 +69,32 @@
 			<ul >
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>这款产品有没有等待期？</div>	</div>	
+				<div class="qa-content"><div>本产品对医院有要求吗？</div>	</div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>您好，这款产品没有等待期，您支付成功后即可进行预约就诊。</br></div>	
+					<div>本产品认可的医院是指符合下列条件的医疗机构: (1)拥有所在国家的合法经营执照; (2)设立的主要目的为向受伤者和患病者提供留院治疗和护理服务; (3)有在所在国合法注册的医生和护士常驻执业,并提供全日24小时的医疗和护理服务。 不包括护理机构、矿泉疗养院、水疗所、疗养所、康复机构、戒酒机构、酒精或者药物滥用看护机构、戒毒机构、疗养院或者养老院等其他类似目的的机构;不包括接受治疗的被保险人或者其家庭拥有全部或者部分所有权的医疗机构。 保险公司保留对上述定义做出适当调整的权利,医院范围和指定医院名单以保险公司网站的最近公布信息为准。您可以登陆泰康在线查询或者拨打24小时服务热线95522咨询。</br></div>	
 				</div>
 			</li>
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>我小孩已经有龋齿了，可以投保吗？</div></div>	
+				<div class="qa-content"><div>进口药可以报销吗？</div></div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>小朋友有龋齿也可以投保。这款产品不需要健康告知，也就是小孩已经有牙齿疾病也可以购买哦。</div>	
+					<div>这款保险产品不限于社保范围内，可以报销进口药的。</div>	
 				</div>
 			</li>
 			<li class="qa-item  question hide">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>我在一家指定医院看过了，下次可以换另一家指定医院治疗吗？</div></div>	
+				<div class="qa-content"><div>这款产品由职业限制吗？</div></div>	
 			</li>
 			<li class="qa-item answer hide">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>不可以，您所购买套餐的所有治疗项目都需要在同一家医院完成，由同一位医生提供服务。</div>
-				</div>
-			</li>
-			<li class="qa-item  question">
-				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>会不会有额外收费？</div></div>	
-			</li>
-			<li class="qa-item answer">
-				<div class="qa-icon" ></div>	
-				<div class="qa-content">
-					<div>只要是您所购买套餐范围内包含的项目都不会有额外收费，如果是套餐范围外的治疗项目可以享受一定优惠。</div>	
+					<div>这款保险产品限1-6类职业投保。</div>
 				</div>
 			</li>
 			</ul>
