--- a/app/template/new/product_204.html
+++ b/app/template/new/product_204.html
@@ -8,7 +8,7 @@
 		<div class="introd-container">
 			<div class="detail-container">
 			  <div>
-				<img src="/img/product/ckbx02.png" ></div>
+				<img src="/img/product/hzhzzj.png" ></div>
 			</div>
 		</div>
 		<!--
@@ -41,15 +41,15 @@
 		<div class="showknow-container" style="display: none;">
 			<div class="know-content">
 			<h4>1.投保年龄</h4>
-			<p>本产品投保年龄为1周岁—18周岁（含1、18周岁）。</p>
-			<h4>2.保险期间</h4>
-			<p>本产品的保险期间为一年，一年内都可以进行预约就诊。</p>
-			<h4>3.等待期</h4>
-			<p>本产品无等待期，支付成功后当日即可提交预约申请。</p>
-			<h4 class="hide">4.投保地区 </h4>
-			<p class="hide">本产品不限投保地区，但仅限在北京、上海、广州的指定医院使用。</p>
-			<h4 class="hide">5.电子保单</h4>
-			<p class="hide">本产品提供电子保单，投保成功后，可在泰康在线官网下载电子保单。http://www.tk.cn/webquery/</p>
+			<p>生满28天-50周岁。</p>
+			<h4>2.保额限制</h4>
+			<p>46-50岁最高5万元，41-45岁最高10万元，36-40岁最高20万元，18-35周岁最高30万元，未成年人重疾最高20万元；其中家庭主妇、孕妇、离退休人员、18岁及以上学生重疾保额最高10万元；无固定职业者（包括待业人员、下岗人员、无业人员）不能投保本计划。</p>
+			<h4>3.投保限制</h4>
+			<p>病毒性肝炎患者、大小三阳及乙肝病毒携带者客户不能投保本产品。</p>
+			<h4 class="hide">4.特别提示 </h4>
+			<p class="hide">被保险人为成年人的,投保人限于本人;被保险人是未成年人的,投保人为其父母。</p>
+			<h4 class="hide">5.保险期间</h4>
+			<p class="hide">保障期间可选，可保障20年、30年。</p>
 
 
 			</div>
@@ -58,8 +58,8 @@
 			</div>
 
 			<div class="button-container">
-				<div class="left"><a href="/ybwx-web/api/web_page/249" class="weui_btn weui_btn_plain_more">产品条款</a></div>
-				<div class="right"><a href="/#/claim_information?claim_id=40" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
+				<div class="left"><a href="/ybwx-web/api/web_page/258" class="weui_btn weui_btn_plain_more">产品条款</a></div>
+				<div class="right"><a href="/#/claim_information?claim_id=39" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
 			</div>
 
 		</div>
@@ -67,42 +67,32 @@
 			<ul >
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>这款产品有没有等待期？</div>	</div>	
+				<div class="qa-content"><div>自己小孩投保的重大疾病保险,在满18周岁后,是否需要重新购买？</div>	</div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>您好，这款产品没有等待期，您支付成功后即可进行预约就诊。</br></div>	
+					<div>A：不需要，对于未成年人购买的合众定期重大疾病保险，在被保险人年满18周岁后，将自动转为成人重大疾病保险。</br></div>	
 				</div>
 			</li>
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>我小孩已经有龋齿了，可以投保吗？</div></div>	
+				<div class="qa-content"><div>这款产品投保有等待期吗？</div></div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>小朋友有龋齿也可以投保。这款产品不需要健康告知，也就是小孩已经有牙齿疾病也可以购买哦。</div>	
+					<div>有等待期的，本产品等待期为180天。</div>	
 				</div>
 			</li>
 			<li class="qa-item  question hide">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>我在一家指定医院看过了，下次可以换另一家指定医院治疗吗？</div></div>	
+				<div class="qa-content"><div>买了这款产品可以退保吗？退保会有违约的费用吗？</div></div>	
 			</li>
 			<li class="qa-item answer hide">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>不可以，您所购买套餐的所有治疗项目都需要在同一家医院完成，由同一位医生提供服务。</div>
-				</div>
-			</li>
-			<li class="qa-item  question">
-				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>会不会有额外收费？</div></div>	
-			</li>
-			<li class="qa-item answer">
-				<div class="qa-icon" ></div>	
-				<div class="qa-content">
-					<div>只要是您所购买套餐范围内包含的项目都不会有额外收费，如果是套餐范围外的治疗项目可以享受一定优惠。</div>	
+					<div>本产品支持退保的。10天的犹豫期内退保，保险公司无息退还您的保费，犹豫期后退仅会退还保单的现金价值，投保人会承担部分损失。</div>
 				</div>
 			</li>
 			</ul>
