牙科预约管理

--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -131,7 +131,7 @@
 </ul>
 <!-- 零保单-->
 <!-- <div  class="cell_font" style=" text-align: center;padding-top:60px;" >
-   <img src="img/qidai.png" >
+   <img src="/img/qidai.png" >
    <div style="font-size: 15px;color:#999;padding-top: 10px">你还没有任何意外保障</div>
 </div> -->
 <!--  -->
