--- a/app/template/new/product_203.html
+++ b/app/template/new/product_203.html
@@ -28,7 +28,7 @@
 
 			</div>
 			<div class="more-1-container ">
-				查看更多  <img src="img/jiantou.png" />
+				查看更多  <img src="/img/jiantou.png" />
 			</div>
 
 			<div class="button-container">
