--- a/app/css/dental_doctor.css
+++ b/app/css/dental_doctor.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-.dental-docter_header {
+.dental-doctor_header {
   position: relative;
   background: #fff;
   margin-bottom: 10px;
@@ -9,7 +9,7 @@
   display: -moz-box;
   display: -ms-flexbox;
   display: flex; }
-  .dental-docter_header::after {
+  .dental-doctor_header::after {
     pointer-events: none;
     position: absolute;
     z-index: 999;
@@ -24,88 +24,88 @@
     -webkit-transform-origin: 0 0;
     transform-origin: 0 0; }
     @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-      .dental-docter_header::after {
+      .dental-doctor_header::after {
         width: 200%;
         height: 200%;
         -webkit-transform: scale(0.5);
         transform: scale(0.5); } }
     @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
-      .dental-docter_header::after {
+      .dental-doctor_header::after {
         width: 200%;
         height: 200%;
         -webkit-transform: scale(1/3);
         transform: scale(1/3); } }
-  .dental-docter_header .dental-docter_header_list {
+  .dental-doctor_header .dental-doctor_header_list {
     -webkit-box-flex: 1;
     -webkit-flex: 1;
     -moz-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
      }
-    .dental-docter_header .dental-docter_header_list .dental-docter_header_list-word {
+    .dental-doctor_header .dental-doctor_header_list .dental-doctor_header_list-word {
       font-size: 15px;
       text-align: center;
       line-height: 15px; }
-    .dental-docter_header .dental-docter_header_list .dental-docter_header_list_steps {
+    .dental-doctor_header .dental-doctor_header_list .dental-doctor_header_list_steps {
       display: -webkit-box;
       display: -webkit-flex;
       display: -moz-box;
       display: -ms-flexbox;
       display: flex;
       margin-bottom: 5px; }
-      .dental-docter_header .dental-docter_header_list .dental-docter_header_list_steps .padd_18 {
+      .dental-doctor_header .dental-doctor_header_list .dental-doctor_header_list_steps .padd_18 {
         margin: 9px 0;
         background: #4285f3; }
-      .dental-docter_header .dental-docter_header_list .dental-docter_header_list_steps .color_ccc {
+      .dental-doctor_header .dental-doctor_header_list .dental-doctor_header_list_steps .color_ccc {
         background: #f0f0f0; }
-      .dental-docter_header .dental-docter_header_list .dental-docter_header_list_steps img {
+      .dental-doctor_header .dental-doctor_header_list .dental-doctor_header_list_steps img {
         height: 20px; }
-      .dental-docter_header .dental-docter_header_list .dental-docter_header_list_steps .flex1 {
+      .dental-doctor_header .dental-doctor_header_list .dental-doctor_header_list_steps .flex1 {
         -webkit-box-flex: 1;
         -webkit-flex: 1;
         -moz-box-flex: 1;
         -ms-flex: 1;
         flex: 1;
          }
-.dental-docter {
+.dental-doctor {
   background: #f5f5f5;
   color: #555; }
-  .dental-docter .dental-docter_main {
+  .dental-doctor .dental-doctor_main {
     background: #fff;
     padding: 20px 10px; }
-    .dental-docter .dental-docter_main .dental-docter_main_tit {
+    .dental-doctor .dental-doctor_main .dental-doctor_main_tit {
       font-size: 18px;
       text-align: center;
       line-height: 18px; }
-    .dental-docter .dental-docter_main .dental-docter_main_user-name {
+    .dental-doctor .dental-doctor_main .dental-doctor_main_user-name {
       color: #999;
       font-size: 15px;
       text-align: center;
       line-height: 15px;
       margin: 15px 0 20px; }
-    .dental-docter .dental-docter_main .dental-docter_main_has {
+    .dental-doctor .dental-doctor_main .dental-doctor_main_has {
       padding: 15px 17px;
       border: 1px solid #ccc;
       border-radius: 5px;
       background: #fff;
       margin-bottom: 10px;
       border-radius: 5px; }
-      .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_box {
+      .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_box {
         display: -webkit-box;
         display: -webkit-flex;
         display: -moz-box;
         display: -ms-flexbox;
         display: flex; }
-        .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_box .dental-docter_main_has_box--left {
+        .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_box .dental-doctor_main_has_box--left {
           -webkit-box-flex: 1;
           -webkit-flex: 1;
           -moz-box-flex: 1;
           -ms-flex: 1;
           flex: 1;
            }
-        .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_box .dental-docter_main_has_box--right {
+        .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_box .dental-doctor_main_has_box--right {
           line-height: 38px; }
-          .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_box .dental-docter_main_has_box--right i {
+          .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_box .dental-doctor_main_has_box--right i {
             display: inline-block;
             transform: rotate(90deg);
             -ms-transform: rotate(90deg);
@@ -113,7 +113,7 @@
             -webkit-transform: rotate(90deg);
             -o-transform: rotate(90deg);
              }
-          .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_box .dental-docter_main_has_box--right .io {
+          .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_box .dental-doctor_main_has_box--right .io {
             display: inline-block;
             transform: rotate(270deg);
             -ms-transform: rotate(270deg);
@@ -121,22 +121,22 @@
             -webkit-transform: rotate(270deg);
             -o-transform: rotate(270deg);
              }
-      .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_tit {
+      .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_tit {
         font-size: 15px;
         line-height: 15px;
         margin-bottom: 11px; }
-      .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_address {
+      .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_address {
         color: #999;
         font-size: 12px;
         line-height: 12px; }
-      .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_docter {
+      .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_doctor {
         display: -webkit-box;
         display: -webkit-flex;
         display: -moz-box;
         display: -ms-flexbox;
         display: flex;
         margin-top: 15px; }
-        .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_docter .docter_pic {
+        .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_doctor .doctor_pic {
           background: #fff;
           min-height: 175px;
           -webkit-box-flex: 1;
@@ -145,30 +145,30 @@
           -ms-flex: 1;
           flex: 1;
           border-radius: 5px; }
-          .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_docter .docter_pic img {
+          .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_doctor .doctor_pic img {
             width: 100%;
             vertical-align: middle; }
-          .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_docter .docter_pic .docter_pic_name-word {
+          .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_doctor .doctor_pic .doctor_pic_name-word {
             border: 1px solid #d4d4d4;
             background: #fff;
             border-radius: 0 0 5px 5px; }
-          .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_docter .docter_pic .docter_pic_name-word:active {
+          .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_doctor .doctor_pic .doctor_pic_name-word:active {
             background: #eee; }
-          .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_docter .docter_pic .docter_pic_name {
+          .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_doctor .doctor_pic .doctor_pic_name {
             text-align: center;
             font-size: 15px;
             line-height: 15px;
             margin: 10px 0; }
-          .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_docter .docter_pic .docter_pic_detail {
+          .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_doctor .doctor_pic .doctor_pic_detail {
             text-align: center;
             font-size: 12px;
             color: #999;
             padding: 0 5px;
             margin-bottom: 10px; }
-        .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_docter .docter_pic:active {
+        .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_doctor .doctor_pic:active {
           z-index: 9999;
           background: red; }
-        .dental-docter .dental-docter_main .dental-docter_main_has .dental-docter_main_has_docter .marRight {
+        .dental-doctor .dental-doctor_main .dental-doctor_main_has .dental-doctor_main_has_doctor .marRight {
           margin-right: 5px; }
-    .dental-docter .dental-docter_main .background {
+    .dental-doctor .dental-doctor_main .background {
       background: #f9f9f9; }
