--- a/app/css/doctor_detail.css
+++ b/app/css/doctor_detail.css
@@ -1,16 +1,16 @@
 @charset "UTF-8";
 body {
   background: #f5f5f5; }
-.docter-detail {
+.doctor-detail {
   color: #444;
   font-size: 15px;
   background: #f5f5f5;
   padding-bottom: 49px; }
-  .docter-detail .docter-detail-main {
+  .doctor-detail .doctor-detail-main {
     background: #fff;
     padding: 0 20px;
     position: relative; }
-    .docter-detail .docter-detail-main::after {
+    .doctor-detail .doctor-detail-main::after {
       pointer-events: none;
       position: absolute;
       z-index: 999;
@@ -25,21 +25,21 @@ body {
       -webkit-transform-origin: 0 0;
       transform-origin: 0 0; }
       @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-        .docter-detail .docter-detail-main::after {
+        .doctor-detail .doctor-detail-main::after {
           width: 200%;
           height: 200%;
           -webkit-transform: scale(0.5);
           transform: scale(0.5); } }
       @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
-        .docter-detail .docter-detail-main::after {
+        .doctor-detail .doctor-detail-main::after {
           width: 200%;
           height: 200%;
           -webkit-transform: scale(1/3);
           transform: scale(1/3); } }
-    .docter-detail .docter-detail-main .docter-detail-main_docter {
+    .doctor-detail .doctor-detail-main .doctor-detail-main_doctor {
       padding: 15px 42px;
       position: relative; }
-      .docter-detail .docter-detail-main .docter-detail-main_docter::after {
+      .doctor-detail .doctor-detail-main .doctor-detail-main_doctor::after {
         pointer-events: none;
         position: absolute;
         z-index: 999;
@@ -54,43 +54,43 @@ body {
         -webkit-transform-origin: 0 0;
         transform-origin: 0 0; }
         @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-          .docter-detail .docter-detail-main .docter-detail-main_docter::after {
+          .doctor-detail .doctor-detail-main .doctor-detail-main_doctor::after {
             width: 200%;
             height: 200%;
             -webkit-transform: scale(0.5);
             transform: scale(0.5); } }
         @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
-          .docter-detail .docter-detail-main .docter-detail-main_docter::after {
+          .doctor-detail .doctor-detail-main .doctor-detail-main_doctor::after {
             width: 200%;
             height: 200%;
             -webkit-transform: scale(1/3);
             transform: scale(1/3); } }
-      .docter-detail .docter-detail-main .docter-detail-main_docter img {
+      .doctor-detail .doctor-detail-main .doctor-detail-main_doctor img {
         width: 120px;
         display: block;
         margin: 0 auto;
         vertical-align: middle;
         margin-bottom: 15px; }
-      .docter-detail .docter-detail-main .docter-detail-main_docter .docter-detail-main_docter_name {
+      .doctor-detail .doctor-detail-main .doctor-detail-main_doctor .doctor-detail-main_doctor_name {
         text-align: center;
         line-height: 15px;
         margin-bottom: 10px; }
-      .docter-detail .docter-detail-main .docter-detail-main_docter .docter-detail-main_docter_detail {
+      .doctor-detail .doctor-detail-main .doctor-detail-main_doctor .doctor-detail-main_doctor_detail {
         text-align: center;
         color: #999;
         font-size: 12px;
         line-height: 12px; }
-        .docter-detail .docter-detail-main .docter-detail-main_docter .docter-detail-main_docter_detail span:nth-child(1) {
+        .doctor-detail .doctor-detail-main .doctor-detail-main_doctor .doctor-detail-main_doctor_detail span:nth-child(1) {
           margin-right: 15px; }
-    .docter-detail .docter-detail-main .docter-detail-main_docter_intro {
+    .doctor-detail .doctor-detail-main .doctor-detail-main_doctor_intro {
       padding-bottom: 20px; }
-      .docter-detail .docter-detail-main .docter-detail-main_docter_intro .docter-detail-main_docter_intro_detail {
+      .doctor-detail .doctor-detail-main .doctor-detail-main_doctor_intro .doctor-detail-main_doctor_intro_detail {
         margin-top: 20px; }
-        .docter-detail .docter-detail-main .docter-detail-main_docter_intro .docter-detail-main_docter_intro_detail .docter-detail-main_docter_intro_detail_tit {
+        .doctor-detail .doctor-detail-main .doctor-detail-main_doctor_intro .doctor-detail-main_doctor_intro_detail .doctor-detail-main_doctor_intro_detail_tit {
           margin-bottom: 10px;
           line-height: 15px;
           font-weight: bold; }
-        .docter-detail .docter-detail-main .docter-detail-main_docter_intro .docter-detail-main_docter_intro_detail span {
+        .doctor-detail .doctor-detail-main .doctor-detail-main_doctor_intro .doctor-detail-main_doctor_intro_detail span {
           margin: 0 10px 0 5px;
           vertical-align: 3px;
           display: inline-block;
@@ -98,8 +98,8 @@ body {
           height: 5px;
           background: #4285f4;
           border-radius: 50%; }
-        .docter-detail .docter-detail-main .docter-detail-main_docter_intro .docter-detail-main_docter_intro_detail .docter-detail-main_docter_intro_detail_word {
+        .doctor-detail .doctor-detail-main .doctor-detail-main_doctor_intro .doctor-detail-main_doctor_intro_detail .doctor-detail-main_doctor_intro_detail_word {
           font-size: 13px; }
-  .docter-detail .kong {
+  .doctor-detail .kong {
     height: 10px;
     background: #f5f5f5; }
