--- a/app/partials/child_dental.html
+++ b/app/partials/child_dental.html
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="css/child_dental.css?rev=e44c929e7cfda59913479c60af4b6375">
+<link rel="stylesheet" href="/css/child_dental.css?rev=76dfb84abd024a789abeb439a0049bec">
 
 <div class="child-dental-container">
     <!--  第一页-->
-	<img src="img/child_dental/index_banner.png">
+	<img src="/img/child_dental/index_banner.png">
 	<div class="child-dental-container_introl">
 		<div class="child-dental-container_introl--company">诺贝泰康少儿齿科保障计划</div>
 		<div class="orange child-dental-container_introl--price">318元/年起</div>
@@ -26,40 +26,40 @@
     	<!-- 简介 -->
         <div class="main-list-profile" id="jianjie">
             <div class="main-list-profile_professor">专家提醒</div>
-            <img src="img/child_dental/profile/profile_1.png">
+            <img src="/img/child_dental/profile/profile_1.png">
             <div class="main-list-profile_word main-list-profile_word--padd">乳牙不好，恒牙就长不好</div>
-            <img src="img/child_dental/profile/profile_2.png">
+            <img src="/img/child_dental/profile/profile_2.png">
              <div class="main-list-profile_word">乳牙需要使用5~10年<br/>对宝宝健康影响重大</div>
-            <img src="img/child_dental/profile/profile_3.png">
+            <img src="/img/child_dental/profile/profile_3.png">
             <div class="main-list-profile_word">牙疼影响宝宝的快乐<br/>牙齿难看影响宝宝的自信</div>
             <div class="main-list-profile_problem">
                 <div class="main-list-profile_problem_paddBottom">针对三大问题</div>
-                <img src="img/child_dental/profile/profile_4.png">
+                <img src="/img/child_dental/profile/profile_4.png">
             </div>
              <div class="main-list_intro" >
-                <img src="img/child_dental/1.png?v=1">
-                <img src="img/child_dental/1-1.png?v=1">
-                <img src="img/child_dental/2.png?v=1">
-                <img src="img/child_dental/2-1.png?v=1">
-                <img src="img/child_dental/3.png?v=1">
-                <img src="img/child_dental/3-1.png?v=1">
-                <img src="img/child_dental/4.png?v=1">
-                <img src="img/child_dental/4-1.png?v=1">
+                <img src="/img/child_dental/1.png?v=1">
+                <img src="/img/child_dental/1-1.png?v=1">
+                <img src="/img/child_dental/2.png?v=1">
+                <img src="/img/child_dental/2-1.png?v=1">
+                <img src="/img/child_dental/3.png?v=1">
+                <img src="/img/child_dental/3-1.png?v=1">
+                <img src="/img/child_dental/4.png?v=1">
+                <img src="/img/child_dental/4-1.png?v=1">
             </div>  
-            <img src="img/child_dental/yuyue.png">
-            <img class="border_bottom" src="img/child_dental/yuyue_word.png">
+            <img src="/img/child_dental/yuyue.png">
+            <img class="border_bottom" src="/img/child_dental/yuyue_word.png">
         </div>
        
     	<!-- 套餐 -->
     	<div class="main-list_intro" id="taocan" style="display: none;">
-            <img src="img/child_dental/package/package_1.png?v=1">
-            <img src="img/child_dental/package/package_11.png?v=1">
-            <img src="img/child_dental/package/package_2.png?v=1">
-            <img src="img/child_dental/package/package_22.png?v=1">
-            <img src="img/child_dental/package/package_3.png?v=1">
-            <img src="img/child_dental/package/package_33.png?v=1">
-             <img src="img/child_dental/package/package_4.png?v=1">
-            <img src="img/child_dental/package/package_44.png?v=1">
+            <img src="/img/child_dental/package/package_1.png?v=1">
+            <img src="/img/child_dental/package/package_11.png?v=1">
+            <img src="/img/child_dental/package/package_2.png?v=1">
+            <img src="/img/child_dental/package/package_22.png?v=1">
+            <img src="/img/child_dental/package/package_3.png?v=1">
+            <img src="/img/child_dental/package/package_33.png?v=1">
+             <img src="/img/child_dental/package/package_4.png?v=1">
+            <img src="/img/child_dental/package/package_44.png?v=1">
         </div><!-- <div class="kong"></div> -->
         
 
@@ -69,7 +69,7 @@
                 <div class="main-list_hospital_box_tit"><span class="num_blue">3</span>家知名口腔医院 <span class="num_blue">24</span>家诊所</div>
                 <!-- 医院logo and detail -->
                 <div class="main-list_hospital_list">
-                    <img src="img/child_dental/hospital/hos_logo.png">
+                    <img src="/img/child_dental/hospital/hos_logo.png">
                     <div>
                         <div class="hospital_name">瑞泰口腔</div>
                         <div class="hospital_name_detail">瑞尔齿科旗下中端品牌，曾经获得"最佳医疗服务连锁机构奖"，"最受百姓信赖的健康品牌”。</div>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="shop_detail"><div class="shop">北京<span>7</span>家门店</div><div><a href="javascript:"></a>点击查看</div></div>
                  <div class="main-list_hospital_list">
-                    <img src="img/child_dental/hospital/hos_logo.png">
+                    <img src="/img/child_dental/hospital/hos_logo.png">
                     <div>
                         <div class="hospital_name">瑞泰口腔</div>
                         <div class="hospital_name_detail">瑞尔齿科旗下中端品牌，曾经获得"最佳医疗服务连锁机构奖"，"最受百姓信赖的健康品牌”。</div>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="shop_detail"><div class="shop">北京<span>7</span>家门店</div><div><a href="javascript:"></a>点击查看</div></div>
                  <div class="main-list_hospital_list">
-                    <img src="img/child_dental/hospital/hos_logo.png">
+                    <img src="/img/child_dental/hospital/hos_logo.png">
                     <div>
                         <div class="hospital_name">瑞泰口腔</div>
                         <div class="hospital_name_detail">瑞尔齿科旗下中端品牌，曾经获得"最佳医疗服务连锁机构奖"，"最受百姓信赖的健康品牌”。</div>
@@ -96,28 +96,28 @@
             <div class="main-list_hospital_doctor">
                 <div class="main-list_hospital_doctor_tit">权威的儿童口腔医生</div>
                 <div class="main-list_hospital_doctor_pic">
-                    <div class="docter_detail">
-                        <div class="docter_pic"><img src="img/child_dental/docter/docter.png"></div>
-                        <div class="docter_name">张蕊</div>
-                        <div class="docter_detail-word">瑞泰口腔总医院专业儿科医师</div>
+                    <div class="doctor_detail">
+                        <div class="doctor_pic"><img src="/img/child_dental/doctor/doctor.png"></div>
+                        <div class="doctor_name">张蕊</div>
+                        <div class="doctor_detail-word">瑞泰口腔总医院专业儿科医师</div>
                     </div>
-                    <div class="docter_detail">
-                        <div class="docter_pic"><img src="img/child_dental/docter/docter.png"></div>
-                        <div class="docter_name">张蕊</div>
-                        <div class="docter_detail-word">瑞泰口腔总医院</div>
+                    <div class="doctor_detail">
+                        <div class="doctor_pic"><img src="/img/child_dental/doctor/doctor.png"></div>
+                        <div class="doctor_name">张蕊</div>
+                        <div class="doctor_detail-word">瑞泰口腔总医院</div>
                         <div>专业儿科医师</div>
                     </div>
-                    <div class="docter_detail docter_detail--last">
-                        <div class="docter_pic"><img src="img/child_dental/docter/docter.png"></div>
-                        <div class="docter_name">张蕊</div>
-                        <div class="docter_detail-word">瑞泰口腔总医院专业儿科医师</div>
+                    <div class="doctor_detail doctor_detail--last">
+                        <div class="doctor_pic"><img src="/img/child_dental/doctor/doctor.png"></div>
+                        <div class="doctor_name">张蕊</div>
+                        <div class="doctor_detail-word">瑞泰口腔总医院专业儿科医师</div>
                     </div>
                 </div>
             </div>
             <div class="kong"></div>
             <!-- 合作医院环境 -->
-            <img src="img/child_dental/huanjing/huanjing_1.png">
-            <img src="img/child_dental/huanjing/huanjing_2.png">
+            <img src="/img/child_dental/huanjing/huanjing_1.png">
+            <img src="/img/child_dental/huanjing/huanjing_2.png">
             <div class="kong"></div>
         </div>
 	</div>
