simple auto commit

--- a/app/partials/pay_success.html
+++ b/app/partials/pay_success.html
@@ -14,8 +14,11 @@
 
 <div ng-show="isChildDental">
 	<div class="pay_success_ctrl">
-		<div class="win">
-			<img src="/wx_share/img/win.png">&nbsp;支付成功，投保中...</div>
+		<div class="win"> <img src="/wx_share/img/win.png">&nbsp;支付成功，投保中...
+				<div style="color:#999;">保险公司将在12小时内完成核保</div>
+		</div>
+
+		
 		<div class="hint">
 			您现在即可
 			<br>按照以下操作进行预约就诊</div>
