--- a/app/sass/pay_success.scss
+++ b/app/sass/pay_success.scss
@@ -3,7 +3,10 @@
 .pay_success_ctrl {
 	padding: 0 .5rem;
 	.win {
-		line-height: 82px; 
+		// line-height: 82px; 
+
+		padding-top:20px;
+		height:82px;
 		font-size: 15px;
 		color: 555;
 		text-align: center;
