--- a/app/partials/child_dental.html
+++ b/app/partials/child_dental.html
@@ -127,7 +127,7 @@
 		<div class="footer-about-mai" ng-click="showMask()">立即购买</div>
 	</footer>
 
-    <div  class="mask" id="dental_mask_container"  style="display:none;z-index:1900">
+    <div  class="mask" id="dental_mask_container"  style="display:none;z-index:2000000">
         <div class="head-container">
             <img src="img/mask_close.jpg" style="width:20px;height:20px;float:right;margin-top: 5px;margin-right: 5px;" ng-click="close()" />
             <div class="taocan">
@@ -137,7 +137,7 @@
                  <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,579)">C:瑞泰/普尔-虫牙治疗套餐 1138元/年</div>         
                  <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,580)">D:拜博-咬合畸形检查套餐 418元/年</div>   
         
-                 <div class="mask_des" >   A、C套餐支持北京和上海使用，B、D套餐支持北京和广州使用。      </div>
+                 <div class="mask_des" >   A、C套餐支持北京和上海使用<br/>B、D套餐支持北京和广州使用      </div>
             </div>
             <div class="submit-wrapper">
              <div class="ybwx-btn ybwx-btn--primary" ng-click="submit()">确定</div>   
