--- a/app/partials/child_dental.html
+++ b/app/partials/child_dental.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/child_dental.css?rev=e44c929e7cfda59913479c60af4b6375">
+<link rel="stylesheet" href="css/child_dental.css?rev=9a5b3f9b50a7cfbd70b4dc250bbba240">
 
 <div class="child-dental-container">
     <!--  第一页-->
@@ -69,29 +69,29 @@
                 <div class="main-list_hospital_box_tit"><span class="num_blue">3</span>家知名口腔医院 <span class="num_blue">24</span>家诊所</div>
                 <!-- 医院logo and detail -->
                 <div class="main-list_hospital_list">
-                    <img src="img/child_dental/hospital/hos_logo.png">
+                    <img src="img/child_dental/hospital/hos_logo_1.png">
                     <div>
                         <div class="hospital_name">瑞泰口腔</div>
                         <div class="hospital_name_detail">瑞尔齿科旗下中端品牌，曾经获得"最佳医疗服务连锁机构奖"，"最受百姓信赖的健康品牌”。</div>
                     </div>
                 </div>
-                <div class="shop_detail"><div class="shop">北京<span>7</span>家门店</div><div><a href="javascript:"></a>点击查看</div></div>
+                <div class="shop_detail"><div class="shop">北京<span>7</span>家门店</div><div ng-click="showToast(1)">点击查看</div></div>
                  <div class="main-list_hospital_list">
-                    <img src="img/child_dental/hospital/hos_logo.png">
+                    <img src="img/child_dental/hospital/hos_logo_2.png">
                     <div>
-                        <div class="hospital_name">瑞泰口腔</div>
-                        <div class="hospital_name_detail">瑞尔齿科旗下中端品牌，曾经获得"最佳医疗服务连锁机构奖"，"最受百姓信赖的健康品牌”。</div>
+                        <div class="hospital_name">拜博口腔</div>
+                        <div class="hospital_name_detail">成立于1993年， 联想控股成员企业，中国口腔医疗服务市场消费者满意首选品牌、中国口腔医疗连锁行业十大具有影响力品牌。</div>
                     </div>
                 </div>
-                <div class="shop_detail"><div class="shop">北京<span>7</span>家门店</div><div><a href="javascript:"></a>点击查看</div></div>
+                <div class="shop_detail"><div class="shop">北京14家门店 &nbsp;&nbsp;广州1家门店</div><div ng-click="showToast(2)">点击查看</div></div>
                  <div class="main-list_hospital_list">
-                    <img src="img/child_dental/hospital/hos_logo.png">
+                    <img src="img/child_dental/hospital/hos_logo_3.png">
                     <div>
-                        <div class="hospital_name">瑞泰口腔</div>
-                        <div class="hospital_name_detail">瑞尔齿科旗下中端品牌，曾经获得"最佳医疗服务连锁机构奖"，"最受百姓信赖的健康品牌”。</div>
+                        <div class="hospital_name">普尔口腔</div>
+                        <div class="hospital_name_detail">成立于2002年的高档齿科医院。温馨舒适的诊疗环境，具有资深水准的医疗团队，严格的消毒隔离流程，完善的管理体系。</div>
                     </div>
                 </div>
-                <div class="shop_detail"><div class="shop">北京<span>7</span>家门店</div><div><a href="javascript:"></a>点击查看</div></div>
+                <div class="shop_detail"><div class="shop">北京1家门店 &nbsp;&nbsp;上海1家门店</div><div ng-click="showToast(3)">点击查看</div></div>
             </div>
             <div class="main-list_hospital_doctor">
                 <div class="main-list_hospital_doctor_tit">权威的儿童口腔医生</div>
@@ -144,6 +144,75 @@
              </div>
         </div>
         
+    </div>
+</div>
+<!-- 点击查看 -->
+<!-- 瑞泰 -->
+<div class="child-dental-container_mask" id="toast_1" >
+    <div class="child-dental-container_toast"> 
+        <div class="toast-tit">瑞泰口腔医院各分院地址</div>
+        <div class="toast-main">
+            <div class="toast-main_tit">1、瑞泰口腔医院总院</div>
+            <div class="toast-main_word">北京市朝阳区北苑路媒体村天居园一号楼</div>
+            <div class="toast-main_tit">2、瑞泰口腔医院亦庄分院</div>
+            <div class="toast-main_word">北京亦庄经济技术开发区文化园东路沃尔玛广场山姆会员商店入口旁</div>
+            <div class="toast-main_tit">3、瑞泰口腔医院上地分院</div>
+            <div class="toast-main_word">北京市海淀区上地十街辉煌国际1号院6号楼2层206</div>
+            <div class="toast-main_tit">4、瑞泰口腔医院望京分院</div>
+            <div class="toast-main_word">北京市朝阳区广顺北大街望京六佰本北区三层B03</div>
+            <div class="toast-main_tit">5、瑞泰口腔医院双井分院</div>
+            <div class="toast-main_word">北京市朝阳区广渠路金茂街7号楼一层7-7地铁大郊亭站A口</div>
+            <div class="toast-main_tit">6、瑞泰口腔医院海淀万柳分院</div>
+            <div class="toast-main_word">北京市海淀区万柳中路15号303</div>
+            <div class="toast-main_tit">7、瑞泰口腔医院亦庄经开分院</div>
+            <div class="toast-main_word">北京经济技术开发区地盛北街1号院40号楼</div>
+        </div>
+    </div>
+</div>
+<!-- 普洱 -->
+<div class="child-dental-container_mask" id="toast_2">
+    <div class="child-dental-container_toast"> 
+        <div class="toast-tit">北京拜博口腔医院地址</div>
+        <div class="toast-main">
+            <div class="toast-main_tit">1、北京拜博拜尔口腔医院（总部）</div>
+            <div class="toast-main_word">北京市东城区祈年大街兴隆国际18号院4号楼</div>
+            <div class="toast-main_tit">2、北京拜博拜尔口腔医院樱花门诊部</div>
+            <div class="toast-main_word">北京市朝阳区樱花园东街1号</div>
+            <div class="toast-main_tit">3、北京拜博拜尔口腔医院劲松门诊部</div>
+            <div class="toast-main_word">朝阳区劲松农光里21号楼南三号楼</div>
+            <div class="toast-main_tit">4、北京拜博拜尔口腔医院知春路门诊部</div>
+            <div class="toast-main_word">北京市海淀区白塔庵汉荣家园一号楼一层</div>
+            <div class="toast-main_tit">5、北京拜博拜尔口腔医院东城门诊部</div>
+            <div class="toast-main_word">北京市东城区海运仓一号瀚海海运仓大厦一层159号</div>
+            <div class="toast-main_tit">6、北京拜博拜尔口腔医院青年路门诊部</div>
+            <div class="toast-main_word">朝阳区朝阳北路青年汇112号楼底商1-126/127室</div>
+            <div class="toast-main_tit">7、北京拜博拜尔口腔医院阜通门诊</div>
+            <div class="toast-main_word">北京朝阳区阜通东大街望京园605号楼1层。</div>
+            <div class="toast-main_tit">8、北京拜博拜尔口腔医院望京西门诊部</div>
+            <div class="toast-main_word">北京市朝阳区湖光中街南湖西园216号楼底商2层</div>
+            <div class="toast-main_tit">9、北京拜博拜尔口腔医院金融街门诊部</div>
+            <div class="toast-main_word">北京市西城区金融街广成街4号金宸国际公寓2号楼2单元303室。</div>
+            <div class="toast-main_tit">10、北京拜博拜尔口腔医院姚家园门诊部</div>
+            <div class="toast-main_word">北京市朝阳区东三环北路30号紫荆豪庭A座底商</div>
+            <div class="toast-main_tit">11、北京拜博拜尔口腔医院金台路门诊部</div>
+            <div class="toast-main_word">北京市朝阳区金台里10号3层综合楼</div>
+            <div class="toast-main_tit">12、大都会门诊（试营业））</div>
+            <div class="toast-main_word">北京市朝阳区东三环中路甲10号2层201室</div>
+            <div class="toast-main_tit">13、北京拜博拜尔口腔医院观巢门诊部（待开业）</div>
+            <div class="toast-main_word">北京市朝阳区慧忠里122号1层104、2层202、三层301局部 </div>
+            <div class="toast-main_tit">14、北京拜博拜尔口腔医院融科门诊部（待开业）</div>
+            <div class="toast-main_word">北京市海淀区中关村科学院南路2号融科资讯中心B座二层</div>
+        </div>
+    </div>
+</div>
+<!-- 拜博 -->
+<div class="child-dental-container_mask" id="toast_3" >
+    <div class="child-dental-container_toast"> 
+        <div class="toast-tit">广州拜博口腔医院地址</div>
+        <div class="toast-main">
+            <div class="toast-main_tit">1、广州拜博口腔医院惠尔分院</div>
+            <div class="toast-main_word">广州市海珠区新港东路2-4号</div>
+        </div>
     </div>
 </div>
 <script>
