--- a/app/sass/child_dental.scss
+++ b/app/sass/child_dental.scss
@@ -286,3 +286,55 @@
 		}
 	}
 }
+
+.child-dental-container_mask {
+	display: none;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	left: 0;
+	top: 0;
+	background: rgba(0,0,0,.4);
+	cursor: pointer;
+	z-index: 1000;
+	.child-dental-container_toast {
+
+		box-sizing: border-box;
+		width: 86%;
+		background: #fff;
+		margin: auto;
+		min-height: 50px;
+		max-height: 400px;
+		overflow: auto;
+		border-radius: 5px;
+		position: fixed;
+		top: 90px;
+		z-index: 9999;
+		right: 0;
+		left: 0;
+		padding: 0 20px;
+		border-top: 20px solid #fff;
+		border-bottom: 20px solid #fff;
+
+		.toast-tit {
+			font-size: 15px;
+			text-align: center;
+			line-height: 15px;
+			padding-bottom: 20px;
+			@include border(0 0 1px 0,#e2e2e2);
+		}
+		.toast-main {
+			padding-top: 10px;
+			.toast-main_tit {
+				font-size: 13px;
+				// line-height: 13px;
+				padding: 10px 0 5px;
+			}
+			.toast-main_word {
+				color: #999;
+				font-size: 12px;
+				// line-height: 13px;
+			}
+		}
+	}
+}
