--- a/app/sass/child_dental.scss
+++ b/app/sass/child_dental.scss
@@ -327,13 +327,12 @@
 			padding-top: 10px;
 			.toast-main_tit {
 				font-size: 13px;
-				// line-height: 13px;
+				line-height: 13px;
 				padding: 10px 0 5px;
 			}
 			.toast-main_word {
 				color: #999;
 				font-size: 12px;
-				// line-height: 13px;
 			}
 		}
 	}
