--- a/app/partials/dental/reservation_list.html
+++ b/app/partials/dental/reservation_list.html
@@ -1,10 +1,5 @@
 <link rel="stylesheet" href="/css/dental/teeth_reservation_list.css?rev=421b4f8e794c1f31ecf792c2d272de00">
 
-<style>
-	.teeth-reservationinfo {
-		display: none;
-	}
-</style>
 
 <div class="teeth_reservation_container" data-ng-init="init()"  cg-busy="secondPromise">
 	<ul>
@@ -14,12 +9,12 @@
 		<li>
 			<div class="teeth-title-container"><?=$res['package_name']?>
 				<div class="teeth-tip"></div>
-				<?php if ($res['status'] == 0): ?>
+				<?php if ($res['can_reserve']): ?>
 				<div class="teech-btn-wrapper">
 				<div class="ybwx-btn ybwx-btn--primary" ng-click="goDentalDoctor()" data-id="<?=$res['id']?>">预约</div>
 				</div>
-				<?php elseif ($res['status'] == 0): ?>
-				<div class="teeth-status">预约成功</div>
+				<?php else: ?>
+				<div class="teeth-status"><?=$res['status_text']?></div>
 				<?php endif; ?>
 			</div>
 			<div class="teeth-content">
@@ -40,16 +35,18 @@
 				</div>
 			</div>
 
+			<?php if (isset($res['detail']['status_text'])): ?>
 			<div class="teeth-reservationinfo">
 				<div class="teeth-reservationinfo_content" >
-					<div class="teeth-reservationinfo_info">【已治疗】涂氟、窝沟封闭2颗</div>
-					<div class="teeth-reservationinfo_date">2016-09-28</div>
+					<div class="teeth-reservationinfo_info"><?=$res['detail']['status_text']?></div>
+					<div class="teeth-reservationinfo_date"><?=$res['detail']['datetime']?></div>
 				</div>
 				<div class="teeth-reservationinfo_tip">
 
 					<i class="iconfont" style="color:#ccc;font-size:13px;">&#xe60f;</i>
 				</div>
 			</div>
+			<?php endif; ?>
 		</li>
 
 <?php endforeach; ?>
