--- a/app/sass/dental_doctor.scss
+++ b/app/sass/dental_doctor.scss
@@ -57,6 +57,24 @@
 			line-height: 15px;
 			margin: 15px 0 20px;
 		}
+		.docter_main_user-hint {
+			font-size: 12px;
+			color: #999;
+			line-height: 12px;
+			margin-bottom: 7px;
+			span {
+				display: inline-block;
+				width: 6px;
+				height: 6px;
+				background: #ccc;
+				border-radius: 50%;
+				margin-right: 10px;
+				vertical-align: 1px;
+			}
+		}
+		.mar_10 {
+			margin-bottom: 10px;
+		}
 		
 		.dental-doctor_main_has {
 			padding: 15px 17px;
