--- a/app/partials/child_dental.html
+++ b/app/partials/child_dental.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/child_dental.css?rev=bbad7d2c5abcd141eb46c8fcdfaff19a">
+<link rel="stylesheet" href="/css/child_dental.css?rev=1d3ceac19865cffabb01a2f3609a4679">
 
 <div class="child-dental-container">
     <!--  第一页-->
@@ -96,21 +96,23 @@
             <div class="main-list_hospital_doctor">
                 <div class="main-list_hospital_doctor_tit">权威的儿童口腔医生</div>
                 <div class="main-list_hospital_doctor_pic">
-                    <div class="doctor_detail">
-                        <div class="doctor_pic"><img src="/img/child_dental/doctor/doctor.png"></div>
-                        <div class="doctor_name">张蕊</div>
-                        <div class="doctor_detail-word">瑞泰口腔总医院专业儿科医师</div>
+                    <div class="docter_detail">
+                        <div class="docter_pic"><img src="/img/child_dental/docter/docter_1.png"></div>
+                        <div class="docter_name">葛立宏教授</div>
+                        <div class="docter_detail-word">瑞泰口腔北京总院</div>
+                        <div>北大口腔儿科主任医师</div>
                     </div>
-                    <div class="doctor_detail">
-                        <div class="doctor_pic"><img src="/img/child_dental/doctor/doctor.png"></div>
-                        <div class="doctor_name">张蕊</div>
-                        <div class="doctor_detail-word">瑞泰口腔总医院</div>
-                        <div>专业儿科医师</div>
+                    <div class="docter_detail">
+                        <div class="docter_pic"><img src="/img/child_dental/docter/docter_2.png"></div>
+                        <div class="docter_name">李丹副主任</div>
+                        <div class="docter_detail-word">拜博口腔北京总院</div>
+                        <div>儿童口腔专家</div>
                     </div>
-                    <div class="doctor_detail doctor_detail--last">
-                        <div class="doctor_pic"><img src="/img/child_dental/doctor/doctor.png"></div>
-                        <div class="doctor_name">张蕊</div>
-                        <div class="doctor_detail-word">瑞泰口腔总医院专业儿科医师</div>
+                    <div class="docter_detail docter_detail--last">
+                        <div class="docter_pic"><img src="/img/child_dental/docter/docter_3.png"></div>
+                        <div class="docter_name">陈育松医生</div>
+                        <div class="docter_detail-word">拜博口腔广州分院</div>
+                        <div>口腔正畸专家</div>
                     </div>
                 </div>
             </div>
@@ -131,13 +133,14 @@
         <div class="head-container">
             <img src="img/mask_close.jpg" style="width:20px;height:20px;float:right;margin-top: 5px;margin-right: 5px;" ng-click="close()" />
             <div class="taocan">
-                 <div class="title">请选择购买的套餐</div>
-                 <div class="ybwx-btn ybwx-btn--primary"   ng-click="choose($event,577)">A:瑞泰/普尔-乳牙保健套餐 318元/年</div>         
-                 <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,578)">B:拜博-儿童虫牙预防套餐 498元/年</div>         
-                 <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,579)">C:瑞泰/普尔-虫牙治疗套餐 1138元/年</div>         
-                 <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,580)">D:拜博-咬合畸形检查套餐 418元/年</div>   
+                <div class="title">请选择购买的套餐</div>
+                <div class="ybwx-btn ybwx-btn--primary"   ng-click="choose($event,577)">A:瑞泰/普尔-乳牙保健套餐 318元/年</div>         
+                <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,578)">B:拜博-儿童虫牙预防套餐 498元/年</div>         
+                <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,579)">C:瑞泰/普尔-虫牙治疗套餐 1138元/年</div>         
+                <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,580)">D:拜博-咬合畸形检查套餐 418元/年</div>   
         
-                 <div class="mask_des" >   A、C套餐支持北京和上海使用<br/>B、D套餐支持北京和广州使用      </div>
+                <div class="mask_des" >   A、C套餐支持北京和上海使用 </div>
+                <div class="" >   B、D套餐支持北京和广州使用 </div>
             </div>
             <div class="submit-wrapper">
              <div class="ybwx-btn ybwx-btn--primary" ng-click="submit()">确定</div>   
@@ -201,17 +204,24 @@
             <div class="toast-main_tit">13、北京拜博拜尔口腔医院观巢门诊部（待开业）</div>
             <div class="toast-main_word">北京市朝阳区慧忠里122号1层104、2层202、三层301局部 </div>
             <div class="toast-main_tit">14、北京拜博拜尔口腔医院融科门诊部（待开业）</div>
-            <div class="toast-main_word">北京市海淀区中关村科学院南路2号融科资讯中心B座二层</div>
+            <div class="toast-main_word" style="margin-bottom: 10px;">北京市海淀区中关村科学院南路2号融科资讯中心B座二层</div>
+        </div>
+        <div class="toast-tit">广州拜博口腔医院地址</div>
+        <div class="toast-main">
+            <div class="toast-main_tit">1、广州拜博口腔医院惠尔分院</div>
+            <div class="toast-main_word">广州市海珠区新港东路2-4号</div>
         </div>
     </div>
 </div>
 <!-- 拜博 -->
 <div class="child-dental-container_mask" id="toast_3" >
     <div class="child-dental-container_toast"> 
-        <div class="toast-tit">广州拜博口腔医院地址</div>
+        <div class="toast-tit">普尔口腔医院地址</div>
         <div class="toast-main">
-            <div class="toast-main_tit">1、广州拜博口腔医院惠尔分院</div>
-            <div class="toast-main_word">广州市海珠区新港东路2-4号</div>
+            <div class="toast-main_tit">1、普尔口腔北京</div>
+            <div class="toast-main_word">北京市朝阳区建国路88号SOHO现代城A座0324室</div>
+            <div class="toast-main_tit">2、普尔口腔上海</div>
+            <div class="toast-main_word">上海市黄浦区淮海中路381号中环广场1305室</div>
         </div>
     </div>
 </div>
