--- a/app/partials/dental/select_doctor.html
+++ b/app/partials/dental/select_doctor.html
@@ -45,7 +45,7 @@
 	</div>
 	<div class="kong"></div>
 	<div class="bottom_ctrl">
-		<div class="finish">立即预约</div>
+		<div class="finish" ng-click="goConfirm()">立即预约</div>
 	</div>
 </div>
 
