--- a/app/sass/dental_doctor.scss
+++ b/app/sass/dental_doctor.scss
@@ -76,7 +76,7 @@
 			margin-bottom: 10px;
 		}
 		
-		.dental-doctor_main_has {
+		.dental-docter_main_has {
 			padding: 15px 17px;
 			border: 1px solid #ccc;
 			border-radius: 5px;
