--- a/app/partials/dental/confirm.html
+++ b/app/partials/dental/confirm.html
@@ -39,7 +39,7 @@
 		</div>
 	</div>
 	<div class="bottom_ctrl">
-		<div class="finish">确定</div>
+		<div class="finish" ng-click="goReservationList()">确定</div>
 	</div>
 </div>
 
