--- a/app/partials/dental/dental_no_shop.html
+++ b/app/partials/dental/dental_no_shop.html
@@ -25,5 +25,5 @@
 	<div class="no-shop_word">您尚未购买齿科保险套餐</div>
 </div>
 <div class="bottom_ctrl">
-	<div class="finish">立即购买</div>
+	<div class="finish" ng-click="goChildDental()">立即购买</div>
 </div>
