simple auto commit

--- a/app/sass/ring.scss
+++ b/app/sass/ring.scss
@@ -160,6 +160,7 @@
 	margin-top: 25px;
 	position: relative;
 	text-align: center;
+	overflow:hidden;
 }
 .left_button {
 	background-color: #247ad1;
