--- a/app/css/ring.css
+++ b/app/css/ring.css
@@ -120,7 +120,8 @@
   padding: 25px 15px 60px;
   margin-top: 25px;
   position: relative;
-  text-align: center; }
+  text-align: center;
+  overflow: hidden; }
 .left_button {
   background-color: #247ad1;
   height: 15px;
